fixed height on mobile2

--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@ body {
 	background-repeat: no-repeat;
 	background-position: center center;
 	color: black;
-	height: 100vh;
+	height: 100%;
 	width: 100%;
 	box-shadow: inset 0px 0px 50px 50px rgba(0, 0, 0, 0.4);
 }
